Added reference for Perplexity.ai for the requirments.txt file.

--- a/MSDS_453_Term_Project/requirements.txt
+++ b/MSDS_453_Term_Project/requirements.txt
@@ -11,3 +11,5 @@ polyglot
 pynlpi
 torch
 transformers
+
+# Note: This list was created with the assistance of Perplexity.ai using the Claud 3 model.
